Bug 584423 - Put JSOP_UNBRANDTHIS in the prolog to satisfy the decompiler (r=brendan)